<resources>
    <string name="app_name">Keep An Eye</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_carer_main">Keep An Eye</string>
    <string name="title_activity_cared_main">Keep An Eye</string>
    <string name="choose_a_mode"> What your phone will do?</string>
    <string name="show_what_mom_do"><big>Observe</big>\n\nShow you what your
        mom\'s doing.</string>
    <string name="report_what_u_do"><big>Report</big>\n\nTell your daughter what
        you\'re doing.</string>
    <string name="are_you_carer">Want to be sure\nthat your mom\'s OK?</string>
    <string name="are_u_cared">Want your dauther\nto know that you\'re OK?</string>
    <string name="title_activity_cared_config">Your details</string>
    <string name="label_keepaneye_id">KeepAnEye Id:</string>
    <string name="hint_keepaneye_id">12345</string>
    <string name="name">Your name:</string>
    <string name="hint_name">Mom</string>
    <string name="txt_phone">Carer\'s phone:</string>
    <string name="hint_phone">222222</string>
    <string name="must_be_number">Must be a %1$d -digit number</string>
    <plurals name="more">
        <item quantity="one">One more digit</item>
        <item quantity="other">%d more digits</item>
    </plurals>
    <plurals name="less">
        <item quantity="one">Delete one digit</item>
        <item quantity="other">Delete %d digits</item>
    </plurals>
    <plurals name="cared_last_report_was">
        <item quantity="one">Last report was send one minute ago.</item>
        <item quantity="other">Last report was send %1$d minutes ago.</item>
    </plurals>
    <string name="cared_last_report_just_now">Last report was send less than a minute ago.</string>
    <string name="less">Too long</string>
    <string name="more">Too short or start from space</string>
    <string name="must_be_phone">Should be longer</string>

    <!--Strings for carer-->
    <string name="account_name">FeedSync Service</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="loading">Waiting for sync &#8230;</string>
    <string name="description_refresh">Refresh</string>
    <!--To display in main rows-->
    <string name="minute">m</string>
    <string name="hour">h</string>
    <string name="day">d</string>
    <string name="week">w</string>
    <string name="month">M</string>
    <string name="year">Y</string>
    <string name="description_edit">Edit people</string>
    <string name="description_avatar">Avatar</string>
    <string name="no_cared">Install this application on mobiles of people you want to keep an
        eye on.</string>
    <string name="no_cared2">For this they\'ll need your KeepAnEye Id number:</string>
        <string name="no_cared3">Don\'t give this number to strangers!</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="username">How are you?</string>
    <string name="turn_wifi">This application cannot work without internet connection.
        Connect to the internet and start the application again.</string>
    <string name="registering_in_cloud">Registering in the cloud &#8230;</string>
    <string name="ok">OK</string>
    <string name="title_activity_carer_config">Settings</string>
    <string name="label_choose_sleep">Bed time</string>
    <string name="label_choose_wake">Wake time</string>
    <string name="label_alarms">How long to wait before yellow/red alarm?</string>
    <string name="label_report">No reports for:</string>
    <string name="label_login">No phone usage:</string>
    <string name="label_walk">No walking for:</string>
    <string name="label_ride">No riding for:</string>
    <string name="show">Show? </string>
    <string name="hide">Hide</string>
    <string name="label_phone_number">Phone:</string>
    <string name="cared_no_internet">No internet connection.\nCannot send reports.\nPlease connect
        to the internet\n(WiFi or something).</string>
    <string name="carer_not_yet_reported">No reports sent yet.\n\n</string>
    <string name="cared_fix_phone_number">Please go to settings and enter valid phone number.</string>
    <string name="this_is_not_phone">You can\'t call from tablet!</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="save_btn_txt">Save</string>
    <string name="could_not_upload">Could not upload report this time.</string>
    <string name="could_not_sync">Could not download reports this time.</string>
    <string name="too_short">Too short.</string>
    <string name="too_long">Too long.</string>
    <string name="not_phone_number">This is not a phone number yet.</string>
    <string name="description_show_id">Show KeepAnEye Id</string>
    <string name="description_edit_id">Change KeepAnEye Id</string>
    <string name="you_will_change_careds">You will monitor different group of people now!</string>
    <string name="only_numbers_allowed">Must be a number.</string>
    <string name="should_be_longer">Too short.</string>
    <string name="should_be_shorter">Too long.</string>
    <string name="install_in_carer_mode">Install application in carer mode.</string>
    <string name="install_in_cared_mode">Install application in cared mode.</string>
    <string name="make_phone_call">Make a phone call.</string>
    <string name="must_sb_btn">mSubmitButton is compulsory.</string>
    <string name="too_long_mjson_id_string">Too long myjson id string:</string>
    <string name="is_not_character">cannot be converted to a character.</string>
    <string name="background_text">Keep An Eye</string>
    <string name="font_family">fonts/Unkempt-Regular.ttf</string>
</resources>
