<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_cared_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/CaredConfigRow">

            <TextView
                style="@style/CaredLabel"
                android:text="@string/label_keepaneye_id" />

            <EditText
                android:id="@+id/id_entry_field"
                style="@style/CaredTextEdit"
                android:hint="@string/hint_keepaneye_id"
                android:inputType="number"
                android:maxLength="14"
                android:maxWidth="20dp" />
        </LinearLayout>

        <LinearLayout style="@style/CaredConfigRow">

            <TextView
                style="@style/CaredLabel"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name_entry_field"
                style="@style/CaredTextEdit"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout style="@style/CaredConfigRow">

            <TextView
                style="@style/CaredLabel"
                android:text="@string/txt_phone"
                />

            <EditText
                android:id="@+id/phone_entry_field"
                style="@style/CaredTextEdit"
                android:hint="@string/hint_phone"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>

