<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_2_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0"
    android:orientation="vertical"
    android:visibility="visible">

    <com.kureda.android.keepaneye.both.util.FontTextView
        android:id="@+id/txt_header"
        style="@style/InstallationButton"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:background="@color/white"
        android:text="@string/choose_a_mode"
        android:textColor="@color/red500" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_carer"
            style="@style/InstallationButton"
            android:clickable="true"
            android:onClick="setMode"
            android:padding="0dp"
            app:srcCompat="@drawable/ic_carer2"/>
        <ImageButton
            android:id="@+id/btn_cared"
            style="@style/InstallationButton"
            android:clickable="true"
            android:onClick="setMode"
            android:padding="0dp"
            app:srcCompat="@drawable/ic_cared2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.kureda.android.keepaneye.both.util.FontTextView
            android:id="@+id/txt_carer"
            style="@style/InstallationButton"
            android:layout_marginTop="0dp"
            android:text="@string/show_what_mom_do"
            android:elevation="0dp"
            android:gravity="end"
            android:textColor="@color/blue700" />

        <com.kureda.android.keepaneye.both.util.FontTextView
            android:id="@+id/txt_cared"
            style="@style/InstallationButton"
            android:layout_marginTop="0dp"
            android:text="@string/report_what_u_do"
            android:elevation="0dp"
            android:gravity="end"
            android:textColor="@color/amber900" />

    </LinearLayout>

</LinearLayout>